--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script type="text/javascript" src="javascripts/modernizr.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript" src="frontend/builds/dev/js/pubsub.js"></script>
+    <script type="text/javascript" src="frontend/builds/dev/js/test.js"></script>
     <script type="text/javascript">
       $(document).ready(function () {
         $('#main_content').headsmart()
@@ -47,9 +49,37 @@
 
       <section id="main_content">
         <h1>
-<a name="hi" class="anchor" href="#hi"><span class="octicon octicon-link"></span></a>Hi!</h1>
-
-<p>This is my implementation of this pattern. So I want to share it with you.</p>
+          <a name="hi" class="anchor" href="#hi"><span class="octicon octicon-link"></span></a>
+          Hello everybody!
+        </h1>
+        <p>
+          This is my implementation of this pattern. So I want to share it with you.
+        </p>
+        <h2>Here is a small demo:</h2>
+        <p>
+          Event 1
+          <br>
+          <button onclick="fireEvent('evt1', 'yo-yo-yo')">Broadcast</button>
+          <input id="text1" type="text">
+          <button onclick="onEvent('h1')">On</button>
+          <button onclick="offEvent('h1')">Off</button>
+        </p>
+        <p>
+          Event 2
+          <br>
+          <button onclick="fireEvent('evt2', 'the second speacks')">Broadcast</button>
+          <input id="text2" type="text">
+          <button onclick="onEvent('h2')">On</button>
+          <button onclick="offEvent('h2')">Off</button>
+        </p>
+        <p>
+          Event 3
+          <br>
+          <button onclick="fireEvent('evt3', 'Hola!')">Broadcast</button>
+          <input id="text3" type="text">
+          <button onclick="onEvent('h3')">On</button>
+          <button onclick="offEvent('h3')">Off</button>
+        </p>
       </section>
 
       <footer>
